Remove more jquery code

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
 	<!-- ITEMS -->
 	<!-- Gem Selection Table -->
-	<table id="gem-selection-table" cellspacing="0" data-color='none' style="visibility: hidden;"></table>
+	<table id="gem-selection-table" cellspacing="0" data-color='none' style="display: none;"></table>
 
 	<div id="item-selection-container">
 		<div id="profiles-and-sources">
@@ -632,7 +632,7 @@
 		<button id='hide-show-items-btn'>Hide / Show Items</button>
 		<button id='gem-options-button'>Fill Item Sockets</button>
 		<button id='show-equipped-items'>Show Equipped Items</button>
-		<div id='gem-options-window'>
+		<div id='gem-options-window' style="display: none;">
 			<div id='gem-options-window-replacement-options'>
 				<input type="radio" name='gem-replacement-option' value='emptySockets' checked />
 				<label for='emptySockets'>Fill empty sockets</label>
