Remove curse of doom and change races available

--- a/index.html
+++ b/index.html
@@ -135,11 +135,10 @@
 				<li>
 					<span class="settings-left">Race</span>
 					<select name="race" id="race-dropdown-list" class="settings-right">
-						<option value="gnome">Gnome</option>
-						<option value="human">Human</option>
+						<option value="draenei">Draenei</option>
 						<option value="orc">Orc</option>
-						<option value="undead">Undead</option>
-						<option value="bloodElf">Blood Elf</option>
+						<option value="tauren">Tauren</option>
+						<option value="troll">Troll</option>
 					</select>
 				</li>
 				<li>
