--- a/index.html
+++ b/index.html
@@ -423,12 +423,8 @@
 		<!-- TALENTS -->
 		<div id="talents-container">
 			<div id="preset-talent-buttons">
-				<button class="preset-talent-button" data-name="afflictionUa">Affli/UA</button><!--
-			--><button class="preset-talent-button" data-name="afflictionRuin">Affli/Ruin</button><!--
-			--><button class="preset-talent-button" data-name="destruction">Destruction</button><!--
-			--><button class="preset-talent-button" data-name='destroNightfall'>Destro/Nightfall</button><!--
-			--><button class="preset-talent-button" data-name="demonologyFelguard">Demonology/Felguard</button><!--
-			--><button class="preset-talent-button" data-name="demonologyRuin">Demonology/Ruin</button>
+				<button class="preset-talent-button" data-name="wrath">41/0/20 (ToW)</button><!--
+			--><button class="preset-talent-button" data-name="ns">40/0/21 (NS)</button>
 			</div>
 			<section id="talents-section"></section>
 		</div>
