Shaman Hit talents added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				<p class="character-stat-val" id="character-spell-power-val"></p>
 			</li>
 			<li>
-				<p class="character-stat">Shadow Power</p>
-				<p class="character-stat-val" id="character-shadow-power-val"></p>
+				<p class="character-stat">Nature Power</p>
+				<p class="character-stat-val" id="character-nature-power-val"></p>
 			</li>
 			<li>
 				<p class="character-stat">Fire Power</p>
@@ -67,8 +67,8 @@
 				<p class="character-stat-val" id="character-haste-val"></p>
 			</li>
 			<li>
-				<p class="character-stat">Shadow Dmg %</p>
-				<p class="character-stat-val" id="character-shadow-damage-modifier-val"></p>
+				<p class="character-stat">Nature Dmg %</p>
+				<p class="character-stat-val" id="character-nature-damage-modifier-val"></p>
 			</li>
 			<li>
 				<p class="character-stat">Fire Dmg %</p>
@@ -158,8 +158,8 @@
 					<input id="target-level" value="73" type="number" name="target-level" class="settings-right">
 				</li>
 				<li>
-					<span class="settings-left">Target Shadow Resistance</span>
-					<input id="target-shadow-resistance" value="0" type="number" name="target-shadow-resistance" class="settings-right">
+					<span class="settings-left">Target Nature Resistance</span>
+					<input id="target-nature-resistance" value="0" type="number" name="target-nature-resistance" class="settings-right">
 				</li>
 				<li>
 					<span class="settings-left">Target Fire Resistance</span>
@@ -453,8 +453,8 @@
 					<p id="stat-weight-spellPower" class="character-stat-val">0</p>
 				</li>
 				<li>
-					<p class="character-stat">Shadow Power</p>
-					<p id="stat-weight-shadowPower" class="character-stat-val">0</p>
+					<p class="character-stat">Nature Power</p>
+					<p id="stat-weight-naturePower" class="character-stat-val">0</p>
 				</li>
 				<li>
 					<p class="character-stat">Fire Power</p>
@@ -676,7 +676,7 @@
 					<th id="header-stamina">Stam</th>
 					<th id="header-intellect">Int</th>
 					<th id="header-spell-power">Spell Power</th>
-					<th id="header-shadow-power">Shadow Power</th>
+					<th id="header-shadow-power">Nature Power</th>
 					<th id="header-fire-power">Fire Power</th>
 					<th id="header-crit">Crit</th>
 					<th id="header-hit">Hit</th>
@@ -705,7 +705,7 @@
 				<tr id="item-selection-header">
 					<th id="header-enchant-name">Enchant</th>
 					<th id="header-enchant-spell-power">Spell Power</th>
-					<th id="header-enchant-shadow-power">Shadow Power</th>
+					<th id="header-enchant-shadow-power">Nature Power</th>
 					<th id="header-enchant-fire-power">Fire Power</th>
 					<th id="header-enchant-hit-rating">Hit Rating</th>
 					<th id="header-enchant-crit-rating">Crit Rating</th>
