--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="sidebar">
 	<!-- CHARACTER PANEL -->
 	<section id="character-section">
-		<p id="character-race"><span id="race"></span> Warlock</p>
+		<p id="character-race"><span id="race"></span> Shaman</p>
 		<p id="character-level">Level <span>70</span></p>
 
 		<ul class="character-stats">
